078